# tendril

./: .gitignore  AUDIT-2026-05-10.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tendril-core/: Cargo.toml
crates/tendril-core/src/: config.rs  dirs.rs  error.rs  lib.rs  progress.rs
crates/tendril-core/src/audio/: convert.rs  loudnorm.rs  mix.rs  mod.rs
crates/tendril-core/src/pipeline/: job.rs  mod.rs  orchestrator.rs  queue.rs
crates/tendril-core/src/splitter/: engine.rs
crates/tendril-core/src/youtube/: download.rs  search.rs
crates/tendril-ui/: Cargo.toml  build.rs
crates/tendril-ui/src/: bridge.rs  main.rs  models.rs  state.rs
crates/tendril-ui/ui/: main-window.slint
crates/tendril-ui/ui/widgets/: dep-manager-modal.slint  icons.slint  queue-item.slint  result-row.slint  search-bar.slint  segmented-select.slint  settings-modal.slint  theme.slint
macos/: Info.plist
scripts/: bundle-macos.sh
