[package]
name = "tendril-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint UI for Tendril"
repository = "https://github.com/danczar/tendril"
readme = "../../README.md"

[[bin]]
name = "Tendril"
path = "src/main.rs"

[dependencies]
tendril-core = { path = "../tendril-core" }
slint = { version = "~1.15", features = ["unstable-winit-030"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
futures = { workspace = true }
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
slint = { version = "~1.15", features = ["renderer-skia"] }

[build-dependencies]
slint-build = "1.15"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
